# keras-

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  train.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_experiment.md  pull_request_template.md
.github/workflows/: ci.yml  pre-commit.yml
configs/: config.yaml
notebooks/: 01-data-exploration.ipynb
src/data/: data_manager.py  download_data.py
src/models/: cnn_model.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat  jsonpointer
